[package]
name = "proc-exit"
version = "1.0.0"
description = "Exit codes for process termination"
keywords = ["cli", "exit-codes", "sysexit"]
categories = ["command-line-interface", "os"]
repository = "https://github.com/assert-rs/proc-exit"
documentation = "https://docs.rs/proc-exit"
readme = "README.md"
authors = ["Ed Page <eopage@gmail.com>"]
edition = "2018"
license = "MIT"

[badges]
azure-devops = { project = "assert-rs", pipeline = "proc-exit" }
codecov = { repository = "assert-rs/proc-exit" }

[features]
default = ["portable"]
# Coerce exit codes to `u8` for consistent, cross-platform, behavior
portable = []
