[package]
name = "proc-exit"
version = "1.0.3"
description = "Exit codes for process termination"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-cli/proc-exit"
documentation = "https://docs.rs/proc-exit"
readme = "README.md"
categories = ["command-line-interface", "os"]
keywords = ["cli", "exit-codes", "sysexit"]
edition = "2021"
rust-version = "1.61.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="src/lib.rs", search="proc-exit = \".*\"", replace="proc-exit = \"{{version}}\"", exactly=1},
  {file="README.md", search="proc-exit = \".*\"", replace="proc-exit = \"{{version}}\"", exactly=1},
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/proc-exit/compare/{{tag_name}}...HEAD", exactly=1},
]
